@@ -401,6 +401,9 @@ function PlannerOverlay:init()
                             end
                         end
                     end,
+                    on_change=function(choose)
+                        buildingplan.setChooseItems(uibs.building_type, uibs.building_subtype, uibs.custom_type, choose)
+                    end,
                 },
                 widgets.CycleHotkeyLabel{
                     view_id='safety',
@@ -541,7 +544,6 @@ function PlannerOverlay:onInput(keys)
         end
         self.selected = 1
         self.subviews.hollow:setOption(false)
-        self.subviews.choose:setOption(false)
         self:reset()
         reset_counts_flag = true
         return false
@@ -627,6 +629,8 @@ function PlannerOverlay:onRenderFrame(dc, rect)
 
     if reset_counts_flag then
         self:reset()
+        self.subviews.choose:setOption(require('plugins.buildingplan').getChooseItems(
+            uibs.building_type, uibs.building_subtype, uibs.custom_type))
         self.subviews.safety:setOption(require('plugins.buildingplan').getHeatSafetyFilter(
                 uibs.building_type, uibs.building_subtype, uibs.custom_type))
     end
